fixed layout/spacing (add all columns)

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,1 +1,4 @@
-
+footer {
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
+}
