--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -75,8 +75,8 @@ font-size: 1.125rem;
 /* spacing */
 
 section {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
 }
 
 /* colours */
